--- a/hackdavis2024/package.json
+++ b/hackdavis2024/package.json
@@ -10,9 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cor": "^0.0.0",
+    "cors": "^2.8.5",
+    "expres": "^0.0.5",
+    "express": "^4.19.2",
     "express.js": "^1.0.0",
     "knex": "^3.1.0",
     "nodemon": "^3.1.0",
-    "pg": "^8.11.5"
+    "pg": "^8.11.5",
+    "xlsx": "^0.18.5"
   }
 }
