--- a/hackdavis2024/package.json
+++ b/hackdavis2024/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.3",
     "body-parser": "^1.20.2",
     "cor": "^0.0.0",
     "cors": "^2.8.5",
